--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     
   </head>
   <body>
-
+  <main>
+   
     <h1>Nicolas Guilherme Matheus</h1>
     <h2>teste pul request</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur facilis natus consectetur deleniti incidunt, laboriosam perferendis. Perferendis ducimus sit inventore ab dolorem vitae. Doloremque suscipit assumenda pariatur tenetur, sunt illo.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium incidunt, beatae soluta asperiores. Adipisci, corporis, suscipit! Fugit aut mollitia hic ducimus obcaecati! Ullam, deserunt. Eius ad, suscipit blanditiis fuga amet.</p>
 
+  </main>
+    
   </body>
 </html>
