Adição de um novo parágrafo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h2>teste pull request</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur facilis natus consectetur deleniti incidunt, laboriosam perferendis. Perferendis ducimus sit inventore ab dolorem vitae. Doloremque suscipit assumenda pariatur tenetur, sunt illo.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium incidunt, beatae soluta asperiores. Adipisci, corporis, suscipit! Fugit aut mollitia hic ducimus obcaecati! Ullam, deserunt. Eius ad, suscipit blanditiis fuga amet.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est dolor, consectetur minus placeat voluptatum sit mollitia totam labore, quae quaerat blanditiis asperiores repellat corporis suscipit ad nihil, quos similique sequi.</p>
 
   </main>
     
