--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
    
     <h1>Nicolas Guilherme</h1>
     <h3>pull request</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur facilis natus consectetur deleniti incidunt, laboriosam perferendis. Perferendis ducimus sit inventore ab dolorem vitae. Doloremque suscipit assumenda pariatur tenetur, sunt illo.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium incidunt, beatae soluta asperiores. Adipisci, corporis, suscipit! Fugit aut mollitia hic ducimus obcaecati! Ullam, deserunt. Eius ad, suscipit blanditiis fuga amet.</p>
+    
+    <p>Seja bem vindo</p>
+    <p>Nossa empresa está com mais de 1 milhão de acessos</p>
 
   </main>
     
