--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   
   <main>
    
-    <h1>Título do site</h1>
+    <h1>Título do sistema</h1>
     
     <div>
-       Conteudo do site
+       Conteudo do sistema
     </div>
     
     <h1>
