correção de paragrafo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        Conteudo do sistema
     </div>
     
-    <p>Paragrafo de teste</p>
+    <p>Paragrafo de texto</p>
     
     <h1>
       Copyright Alura
