Adição de mais conteudo ao parágrafo

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div>
        Conteudo do sistema
     </div>
-    
-    <p>Paragrafo de texto</p>
+
+    <p>Paragrafo de teste para testar os commits</p>
     
     <h1>
       Copyright Alura
